Further updates, refactoring

--- a/src/WEB-INF/settings.properties
+++ b/src/WEB-INF/settings.properties
@@ -1,3 +1,7 @@
 [elasticsearch]
 host=localhost
 port=9200
+index=shop
+[adapter]
+read=Webster\Shop\Persistence\ReadAdapter
+relationHandler=Webster\Shop\Persistence\RelationHandler
