--- a/src/composer.json
+++ b/src/composer.json
@@ -6,7 +6,7 @@
     "repositories":[
         {
             "type":"vcs",
-            "url":"http://github.com/MrHash/search"
+            "url":"http://github.com/sydekumf/search"
         }
     ],
     "require": {
